Design/bugfixes (#519)
* [components] Spacing in fullscreen dialog

* [components] No extra padding on defaultpane content

* [components] No border in the ends of list items

* [form-builder] Blur events on reference input

* [components] Using non-svg for placeholder

--- a/packages/@sanity/components/src/lists/styles/DefaultListItem.css
+++ b/packages/@sanity/components/src/lists/styles/DefaultListItem.css
@@ -11,7 +11,7 @@
   border-bottom: var(--list-border);
   padding: var(--small-padding) 0;
 
-  @nest &:first-child {
-    border-top: var(--list-border);
+  @nest &:last-child {
+    border-bottom: none;
   }
 }
